--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+body {
+    background-color: rgb(146, 181, 169);
+}
+
+
 div {
     margin: auto;
     width: 60%;
@@ -8,4 +14,6 @@ img{
     margin: auto;
     text-align: center;
     width: 40%;
+    border-radius: 30%;
 }
+
